# pio-clangd

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  gen_config.py  pio_targets.py
include/: clangd.h
scripts/: env_compiledb.py
src/: clangd.cpp  main.cpp
tests/: test_fixtures.hpp  test_parsing.cpp  test_utilities.cpp
